--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.bingoohuang</groupId>
+            <artifactId>diamond-client</artifactId>
+            <version>0.0.18</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
